# google-drive-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
gdrive_cli/: __init__.py  auth.py  cli.py  client.py  ids.py  paths.py
tasks/: todo.md
tests/: conftest.py  test_auth.py  test_cli.py  test_ids.py  test_output.py
